--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <p> I'm hosted with Github pages. </p>
 <p> this is another change</p>
 <p> this is another change, again</p>
+<p>friday yaay!!!</p>
 
 </body>
 </html>
